--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,90 +8,108 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
+<link rel="stylesheet" href="./css/styles.css" />
+    
 </head>
 <body>
     <header class="page-header"> 
-        <a class="logo link" href="" target="_blank" title="Главная страница">Web<span class="logo-type">Studio</span></a>
-<nav>
+<div class="container flex">
+    <nav class="header-nav">
+<div class="main-logo"><a class="logo link" href="" target="_blank" title="Головна сторінка">Web<span class="logo-type">Studio</span></a></div>
  <ul class="site-nav list">
-     <li><a class="element link current" href="./index.html"  >Студия</a></li>
-     <li><a class="menu-link link" href="./portfolio.html"  >Портфолио</a></li>
-     <li><a class="menu-link link" href=""  >Контакты</a></li>
+     <li><a class="element link current" href="./index.html"  >Студія</a></li>
+     <li><a class="menu-link link" href="./portfolio.html"  >Портфоліо</a></li>
+     <li><a class="menu-item link" href="" >Контакти</a></li>
  </ul>
-</nav>
-<a class="e-mail link" href="malito:info@devstudio.com">info@devstudio.com</a>
-<a class="tel link" href="+380961111111">+38096 111 11 11</a>
+ </nav>
+ <ul class="auth-nav flex list">
+<li><a class="e-mail link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+<li><a class="tel link" href="+380961111111">+38096 111 11 11</a></li>
+ </ul>
+ </div>
 </header>
 <main> 
-    <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-    <button class="hero-btn list" type="button"> Заказать услугу</button></section>
-<section>
-    <h2 hidden class="visually-hidden">Преимущества</h2>
-<ul class="list">
-    <li>
-        <h3 class="list-title"> Внимание к деталям</h3>
-        <p class="list-item">Идейные соображения, а также начало повседневной работы по формированию позиции</p>
+    <section class="hero section">
+    <div class="container">
+        <h1 class="hero-title">Ефективні рішення для <br>вашого бізнесу</h1>
+    <button class="hero-btn list" type="button"> Замовити послугу</button>
+    </div>
+</section>
+<section class="section">
+    <div class="container">
+    <h2 class="visually-hidden">Переваги</h2>
+<ul class="benefits list">
+    <li class="benefits-item">
+        <h3 class="list-title">Увага до деталей</h3>
+        <p class="list-item">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
     </li>
-    <li>
-        <h3 class="list-title">Пунктуальность</h3> 
-        <p  class="list-item">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+    <li class="benefits-item">
+        <h3 class="list-title">Пунктуальність</h3> 
+        <p  class="list-item">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
     </li>
-    <li>
-        <h3 class="list-title">Планирование</h3>
-        <p  class="list-item">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+    <li class="benefits-item">
+        <h3 class="list-title">Планування</h3>
+        <p  class="list-item">Так само консультація з широким активом значною мірою зумовлює.</p>
     </li>
-    <li> 
-        <h3 class="list-title">Современные технологии</h3>
-        <p  class="list-item">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+    <li class="benefits-item"> 
+        <h3 class="list-title">Сучасні технології</h3>
+        <p  class="list-item">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
     </li>
 </ul>
+    </div>
 </section>
-<section>
-    <h2 class="photo-title">Чем мы занимаемся</h2>
+<section class="section padding">
+    <div class="container">
+    <h2 class="photo-title">Чим ми займаємося</h2>
     <ul class="photo list">
-           <li><img width="370" src="images/image1.jpg" alt="Робочий стол" height="294"></li>
-           <li><img width="370" src="images/image2.jpg" alt="Робочий стол" height="294"></li> 
-           <li><img width="370" src="images/image3.jpg" alt="Робочий стол" height="294"></li>
+           <li><img  width="370" src="images/image1.jpg" alt="Робочий стіл" height="294"></li>
+           <li><img  width="370" src="images/image2.jpg" alt="Робочий стіл" height="294"></li> 
+           <li><img  width="370" src="images/image3.jpg" alt="Робочий стіл" height="294"></li>
     </ul>
+    </div>
 </section>
-<section>
+<section class="section workers padding">
+    <div class="container ">
   <h2 class="section-title">Наша команда</h2>
   <ul class="workers list">
-    <li>
-        <img src="images/worker1.jpg" alt="Наш сотрудник" width="270" height="260">
-        <h3 class="item-title">Игорь Демьяненко</h3>
-        <p class="item-text">Product Designer</p>
+   <li class="team-item">
+        <div class="team"><img src="images/worker1.jpg" alt="Наш працівник" width="270" height="260">
+        <h3 class="item-title">Ігор Демьяненко</h3>
+        <p class="item-text">Product Designer</p></div>
     </li>
-    <li>
-        <img src="images/worker2.jpg" alt="Наш сотрудник" width="270" height="260">
-        <h3 class="item-title">Ольга Репина</h3>
-        <p class="item-text">Frontend Developer</p>
+    <li class="team-item"><div class="team">
+        <img src="images/worker2.jpg" alt="Наш працівник" width="270" height="260">
+        <h3 class="item-title">Ольга Репіна</h3>
+        <p class="item-text">Frontend Developer</p></div>
     </li>
-    <li>
-        <img src="images/worker3.jpg" alt="Наш сотрудник" width="270" height="260">
-        <h3 class="item-title">Николай Тарасов</h3>
-        <p class="item-text">Marketing</p>
+    <li class="team-item"><div class="team">
+        <img src="images/worker3.jpg" alt="Наш працівник" width="270" height="260">
+        <h3 class="item-title">Микола Тарасов</h3>
+        <p class="item-text">Marketing</p></div>
     </li>
-    <li>
-        <img src="images/worker4.jpg" alt="Наш сотрудник" width="270" height="260">
-        <h3 class="item-title">Михаил Ермаков</h3>
-        <p class="item-text">UI Designer</p>
+    <li class="team-item"><div class="team">
+        <img src="images/worker4.jpg" alt="Наш працівник" width="270" height="260">
+        <h3 class="item-title">Михайло Єрмаков</h3>
+        <p class="item-text">UI Designer</p></div>
     </li>
   </ul>
+    </div>
 </section>
 </main>
 <footer class="sidebar">
-    <a class="logo link" href="" target="_blank" title="Главная страница">Web<span class="logo-part">Studio</span></a>
-    <address >
+    <div class="container">
+       <div class="footer-logo"><a class="logo link" href="" title="Головна сторінка" >Web<span class="logo-part" >Studio</span></a>
+       </div>
+        <address >
         <ul class="list link">
-            <li><a class="adress link" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
-                    Леси Украинки, 26</a> </li>
+            <li><a class="adress link" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">м. Київ, пр-т
+                    Лесі Українки, 26</a> </li>
             <li><a class=" e-mail-footer link" href="mailto:info@devstudio.com">info@example.com</a> </li>
             <li><a class="tel-footer link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
         </ul>
-    </address>
+        </address>
+</div>
 </footer>
 </body>
 </html>
