--- a/portfolio.html
+++ b/portfolio.html
@@ -1,43 +1,50 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-</head>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="./css/styles.css" />
+    </head>
 
 <body>
-    <header>
-        <a class="logo link" href="" target="_blank" title="Главная страница">Web<span class="logo-type">Studio</span></a>
-        <nav>
+    <header class="page-header">
+      <div class="container flex">
+          <div class="main-logo"><a class="logo link" href="" target="_blank" title="Головна сторінка">Web<span class="logo-type">Studio</span></a>
+          </div>
+         <nav class="header-nav">
             <ul class="site-nav list">
-                <li><a class="element link" href="./index.html">Студия</a></li>
-                <li><a class="menu-link link current"  href="./portfolio.html" >Портфолио</a></li>
-                <li><a class="menu-link link" href="" >Контакты</a></li>
+                <li><a class="element link current" href="./index.html">Студія</a></li>
+                <li><a class="menu-link link current"  href="./portfolio.html" >Портфоліо</a></li>
+                <li><a class="menu-item link" href="" >Контакти</a></li>
             </ul>
-        </nav>
-        <a class="e-mail  link" href="malito:info@devstudio.com">info@devstudio.com</a>
-        <a class="tel  link" href="+380961111111">+38096 111 11 11</a>
+         </nav>
+           <ul class="auth-nav flex list">
+         <li><a class="e-mail  link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+         <li><a class="tel  link" href="+380961111111">+38096 111 11 11</a></li>
+           </ul>
+       </div>
     </header>
 <main>
-    <section>
-        <h1 hidden class="visually-hidden">Наши работы</h1>
+    <section class="section">
+      <div class="container">
+        <h1 class="visually-hidden">Наші проекти</h1>
         <ul class="buttons  list">
             <li>
                 <button class="button-item" type="button">Все</button>
             </li>
             <li>
-                <button class="button-item" type="button">Веб-сайты</button>
+                <button class="button-item" type="button">Веб-сайти</button>
             </li>
             <li>
-                <button class="button-item" type="button">Приложения</button>
+                <button class="button-item" type="button">Додатки</button>
             </li>
             <li>
                 <button class="button-item" type="button">Дизайн</button>
@@ -48,63 +55,76 @@
         </ul>
             <ul class="projects  list"> 
                 <li>
-                    <img src="./images/portfolio1.jpg" alt="Технокряк" width="370" height="404">
-                    <h2 class="projects-title" >Технокряк</h2>
+                    <img class="image" src="./images/portfolio1.jpg" alt="Технокряк" width="370" height="404">
+                    <div class="flex-container"><h2 class="projects-title" >Технокряк</h2>
                     <p class="projects-text">Веб-сайт</p>
+                   </div>
                 </li>
                 <li>
-                    <img src="./images/portfolio2.jpg" alt="Дизайн" width="370" height="404">
-                    <h2 class="projects-title" >Постер New Orlean vs Golden Star</h2>
-                    <p class="projects-text">Дизайн</p> 
+                    <img class="image" src="./images/portfolio2.jpg" alt="Дизайн" width="370" height="404">
+                   <div class="flex-container"> <h2 class="projects-title" >Постер New Orlean vs Golden Star</h2>
+                    <p class="projects-text">Дизайн</p>
+                   </div>
                  </li>
                 <li>
-                    <img src="./images/portfolio3.jpg" alt="Приложение" width="370" height="404">
-                    <h2 class="projects-title" >Ресторан Seafood</h2>
-                    <p class="projects-text">Приложение</p>
+                    <img class="image" src="./images/portfolio3.jpg" alt="Додаток" width="370" height="404">
+                   <div class="flex-container"><h2 class="projects-title" >Ресторан Seafood</h2>
+                    <p class="projects-text">Додаток</p>
+                   </div>
                 </li>
                 <li>
-                   <img src="./images/portfolio4.jpg" alt="Маркетинг" width="370" height="404">
-                   <h2 class="projects-title" >Проект Prime</h2>
+                   <img class="image" src="./images/portfolio4.jpg" alt="Маркетинг" width="370" height="404">
+                   <div class="flex-container"><h2 class="projects-title" >Проект Prime</h2>
                    <p class="projects-text">Маркетинг</p>
+                  </div>
                 </li>
                 <li>
-                    <img src="./images/portfolio5.jpg" alt="Приложение" width="370" height="404">
-                    <h2 class="projects-title" >Проект Boxes</h2>
-                    <p class="projects-text">Приложение</p>
+                    <img class="image" src="./images/portfolio5.jpg" alt="Додаток" width="370" height="404">
+                  <div class="flex-container"><h2 class="projects-title" >Проект Boxes</h2>
+                    <p class="projects-text">Додаток</p>
+                   </div>
                 </li>
                 <li>
-                    <img src="./images/portfolio6.jpg" alt="Веб-сайт" width="370" height="404">
-                    <h2 class="projects-title" >Inspiration has no Borders</h2>
+                    <img class="image" src="./images/portfolio6.jpg" alt="Веб-сайт" width="370" height="404">
+                   <div class="flex-container"><h2 class="projects-title" >Inspiration has no Borders</h2>
                     <p class="projects-text">Веб-сайт</p>
+                   </div>
                 </li>
                 <li>
-                    <img src="./images/portfolio7.jpg" alt="Дизайн" width="370" height="404">
-                    <h2 class="projects-title" >Издание Limited Edition</h2>
+                    <img class="image" src="./images/portfolio7.jpg" alt="Дизайн" width="370" height="404">
+                  <div class="flex-container"><h2 class="projects-title" >Видання Limited Edition</h2>
                     <p class="projects-text">Дизайн</p>
+                  </div>
                 </li>
                 <li>
-                    <img src="./images/portfolio8.jpg" alt="Маркетинг" width="370" height="404">
-                    <h2 class="projects-title" >Проект LAB</h2>
+                    <img class="image" src="./images/portfolio8.jpg" alt="Маркетинг" width="370" height="404">
+                   <div class="flex-container"> <h2 class="projects-title" >Проект LAB</h2>
                     <p class="projects-text">Маркетинг</p>
+                   </div>
                 </li>
                 <li> 
-                    <img src="./images/portfolio9.jpg" alt="Приложение" width="370" height="404">
-                    <h2 class="projects-title" >Growing Business</h2>
-                    <p class="projects-text">Приложение</p>
+                    <img class="image" src="./images/portfolio9.jpg" alt="Додаток" width="370" height="404">
+                 <div class="flex-container"> <h2 class="projects-title" >Growing Business</h2>
+                    <p class="projects-text">Додаток</p>
+                   </div>
                 </li>
             </ul>
+      </div>
     </section>
 </main>
 <footer class="sidebar">
-    <a class="logo  link"  href="" target="_blank" title="Главная страница">Web<span class="logo-part">Studio</span></a>
-    <address>
-        <ul class="list  link">
-            <li><a class="adress link" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
-                    Леси Украинки, 26</a> </li>
+    <div class="container">
+       <div class="footer-logo"><a class="logo  link"  href="" target="_blank" title="Головна сторінка">Web<span class="logo-part">Studio</span></a>
+       </div>
+     <address>
+        <ul class=" basement list  link">
+            <li><a class="adress link" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">м. Киев, пр-т
+                    Лесі Українки, 26</a> </li>
             <li><a class=" e-mail-footer link" href="mailto:info@devstudio.com">info@example.com</a> </li>
             <li><a class="tel-footer link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
         </ul>
-    </address>
+     </address>
+    </div>
 </footer>
 </body>
 </html>
