--- a/index.html
+++ b/index.html
@@ -69,29 +69,33 @@
     </ul>
     </div>
 </section>
-<section class="section workers padding">
+<section class="section workers">
     <div class="container ">
   <h2 class="section-title">Наша команда</h2>
   <ul class="workers list">
    <li class="team-item">
         <div class="team"><img src="images/worker1.jpg" alt="Наш працівник" width="270" height="260">
-        <h3 class="item-title">Ігор Демьяненко</h3>
+        <div class="about-workers"><h3 class="item-title">Ігор Демьяненко</h3>
         <p class="item-text">Product Designer</p></div>
+    </div>
     </li>
     <li class="team-item"><div class="team">
         <img src="images/worker2.jpg" alt="Наш працівник" width="270" height="260">
-        <h3 class="item-title">Ольга Репіна</h3>
+        <div class="about-workers"><h3 class="item-title">Ольга Репіна</h3>
         <p class="item-text">Frontend Developer</p></div>
+    </div>
     </li>
     <li class="team-item"><div class="team">
         <img src="images/worker3.jpg" alt="Наш працівник" width="270" height="260">
-        <h3 class="item-title">Микола Тарасов</h3>
+       <div class="about-workers"><h3 class="item-title">Микола Тарасов</h3>
         <p class="item-text">Marketing</p></div>
+    </div>
     </li>
     <li class="team-item"><div class="team">
         <img src="images/worker4.jpg" alt="Наш працівник" width="270" height="260">
-        <h3 class="item-title">Михайло Єрмаков</h3>
+       <div class="about-workers"><h3 class="item-title">Михайло Єрмаков</h3>
         <p class="item-text">UI Designer</p></div>
+    </div>
     </li>
   </ul>
     </div>
