--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header class="page-header"> 
 <div class="container flex">
     <nav class="header-nav">
-<div class="main-logo"><a class="logo link" href="" target="_blank" title="Головна сторінка">Web<span class="logo-type">Studio</span></a></div>
+<a class="logo link" href="" target="_blank" title="Головна сторінка">Web<span class="logo-type">Studio</span></a>
  <ul class="site-nav list">
-     <li><a class="element link current" href="./index.html"  >Студія</a></li>
-     <li><a class="menu-link link" href="./portfolio.html"  >Портфоліо</a></li>
+     <li class="site-nav-item"><a class="element link current" href="./index.html"  >Студія</a></li>
+     <li class="site-nav-item"><a class="menu-link link" href="./portfolio.html"  >Портфоліо</a></li>
      <li><a class="menu-item link" href="" >Контакти</a></li>
  </ul>
  </nav>
